# cf_app_log_detector

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
test/file/: matching.txt
