[package]
name = "cf_app_log_detector"
version = "0.1.0"
authors = ["Olivier Lechevalier <olivier.lechevalier@gmail.com>"]
edition = "2018"
description = "CF Application Log Detector is a tool to detect file that are CF CLI application logs" 
repository = ""
readme = "README.md"
license = "MIT"
keywords = ["cloud foundry", "cf", "log", "detector"]
categories = ["detector"]

[dependencies]
access_log_parser = "^0"
chrono = "^0.4"
http = "^0.1"
nom = "^4"
defaultmap = "^0.4"
clap = "^2"